# jlquake

./: .gitattributes  .gitignore  CMakeLists.txt  common.props  debug.props  jlquake.sln  release.props  uncrustify.cfg  vquake.sln
libs/core/: CMakeLists.txt  array.h  bsp29file.h  bsp38file.h  cm29_load.cpp  cm29_local.h  cm29_main.cpp  cm29_test.cpp  cm29_trace.cpp  cm38_load.cpp  cm38_local.h  cm38_main.cpp  cm38_public.h  cm38_test.cpp  cm38_trace.cpp  cm46_load.cpp  cm46_local.h  cm46_main.cpp  cm46_patch.cpp  cm46_polylib.cpp  cm46_test.cpp  cm46_trace.cpp  cm_local.h  cm_main.cpp  cm_nonmap.cpp  cm_public.h  cmd.cpp  cmd.h  common.cpp  common.h  core.h  core.vcproj  crc.cpp  crc.h  cvar.cpp  cvar.h  endian.cpp  exception.cpp  exception.h  files.cpp  (+22 more)
libs/jpeg/: CMakeLists.txt  jconfig.h  jmorecfg.h  jpeg.vcproj  jpeg.vcxproj  jpeg.vcxproj.filters
libs/zlib/: CMakeLists.txt  zlib.vcproj  zlib.vcxproj  zlib.vcxproj.filters
q2game/rogue/: CMakeLists.txt  g_local.h  game.h  m_medic.c  rogue.props  rogue.vcproj  rogue.vcxproj  rogue.vcxproj.filters
q2game/xatrix/: CMakeLists.txt  g_local.h  g_spawn.c  game.h  xatrix.props  xatrix.vcproj  xatrix.vcxproj  xatrix.vcxproj.filters
source/: CMakeLists.txt  client_exe.props  server_exe.props
source/apps/: CMakeLists.txt  jlquake.props  jlquake.rc  jlquake.vcxproj  jlquake.vcxproj.filters  jlquakeded.props  jlquakeded.vcxproj  jlquakeded.vcxproj.filters  main.cpp  main.h  resource.h  unix.cpp  windows.cpp
source/botlib/: CMakeLists.txt  aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.cpp  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.cpp  be_aas_main.h  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.cpp  be_aas_optimize.h  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.cpp  be_ai_char.h  be_ai_chat.cpp  be_ai_chat.h  be_ai_gen.cpp  be_ai_gen.h  be_ai_goal.cpp  be_ai_goal.h  be_ai_move.cpp  be_ai_move.h  be_ai_weap.cpp  (+23 more)
source/client/: CMakeLists.txt  cd_null.cpp  cd_public.h  chase.cpp  chase.h  cinematic_cin.cpp  cinematic_local.h  cinematic_main.cpp  cinematic_pcx.cpp  cinematic_public.h  cinematic_roq.cpp  client.h  client.props  client.vcproj  client.vcxproj  client.vcxproj.filters  client_main.cpp  client_main.h  hexen2clientdefs.h  input_keycodes.h  input_keys.cpp  input_main.cpp  input_public.h  input_unix.cpp  input_windows.cpp  mstrconv.cpp  public.h  qasm.h  quake2clientdefs.h  quake3clientdefs.h  quakeclientdefs.h  render_backend.cpp  render_commands.cpp  render_curve.cpp  render_cvars.h  render_driver_glx.cpp  render_driver_wgl.cpp  render_flares.cpp  render_font.cpp  render_image.cpp  (+80 more)
source/common/: CMakeLists.txt  Common.cpp  Common.h  Hexen2EffectsRandom.h  Str.cpp  Str.h  array.h  command_buffer.cpp  command_buffer.h  command_line_args.cpp  command_line_args.h  common.vcxproj  common.vcxproj.filters  common_defs.cpp  common_defs.h  console_variable.cpp  console_variable.h  content_types.h  crc.cpp  crc.h  endian.cpp  endian.h  event_queue.cpp  event_queue.h  exception.cpp  exception.h  files.cpp  files.h  ftol.nasm  game_utils.h  game_utils1.cpp  hexen2defs.h  hexen2strings.cpp  hexen2strings.h  huffman.cpp  huffman.h  info_string.cpp  info_string.h  log.cpp  log.h  (+49 more)
source/core/: CMakeLists.txt  Common.cpp  Common.h  array.h  bsp29file.h  bsp38file.h  bsp46file.h  clipmap29_load.cpp  clipmap29_local.h  clipmap29_main.cpp  clipmap29_test.cpp  clipmap29_trace.cpp  clipmap38_load.cpp  clipmap38_local.h  clipmap38_main.cpp  clipmap38_test.cpp  clipmap38_trace.cpp  clipmap46_load.cpp  clipmap46_local.h  clipmap46_main.cpp  clipmap46_patch.cpp  clipmap46_polylib.cpp  clipmap46_test.cpp  clipmap46_trace.cpp  clipmap_local.h  clipmap_main.cpp  clipmap_nonmap.cpp  clipmap_public.h  cm29_load.cpp  cm29_main.cpp  cm29_test.cpp  cm38_load.cpp  cm38_local.h  cm38_main.cpp  cm38_trace.cpp  cm46_load.cpp  cm46_local.h  cm46_main.cpp  cm46_patch.cpp  cm46_polylib.cpp  (+81 more)
source/enemy_territory/: CMakeLists.txt  README.txt  SConstruct  jlet.vcxproj  jlet.vcxproj.filters  jletded.vcxproj  jletded.vcxproj.filters  wolf.sln
source/hexen2/: CMakeLists.txt  Makefile  Winquake.vcproj  asm_i386.h  bspfile.h  cd_linux.cpp  cd_win.cpp  cdaudio.h  chase.cpp  cl_demo.cpp  cl_draw.cpp  cl_effect.c  cl_effect.cpp  cl_effect.h  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_screen.cpp  cl_tent.cpp  client.h  cmd.c  cmd.cpp  cmd.h  cmodel.cpp  common.c  common.cpp  common.h  conproc.cpp  console.c  console.cpp  console.h  cvar.c  cvar.cpp  cvar.h  d_iface.h  d_local.h  d_polyse.c  d_sprite.c  (+124 more)
source/hexenworld/: CMakeLists.txt  Makefile  h2w.sln
source/null_client/: CMakeLists.txt  main.cpp  null_client.props  null_client.vcxproj
source/progsvm/: CMakeLists.txt  edict.cpp  edict.h  execute.cpp  main.cpp  progs_file.h  progs_main.cpp  progsvm.h  progsvm.vcproj  progsvm.vcxproj  progsvm.vcxproj.filters
source/quake/: CMakeLists.txt  Makefile  WinQuake.sln  WinQuake.vcproj  asm_i386.h  bspfile.h  cd_linux.cpp  cd_win.cpp  cdaudio.h  chase.cpp  cl_demo.cpp  cl_draw.cpp  cl_input.cpp  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_screen.cpp  cl_tent.cpp  client.h  cm_local.h  cmd.cpp  cmd.h  cmodel.cpp  cmodel.h  cmodel_shared.cpp  common.cpp  common.h  conproc.cpp  console.c  console.cpp  console.h  cvar.cpp  cvar.h  draw.h  gl_draw.c  gl_draw.cpp  gl_mesh.c  gl_mesh.cpp  gl_model.cpp  gl_model.h  (+108 more)
source/quake2/: CMakeLists.txt  jlquake2.vcproj  jlquake2.vcxproj  jlquake2.vcxproj.filters  jlquake2ded.props  jlquake2ded.vcproj  jlquake2ded.vcxproj  jlquake2ded.vcxproj.filters  makezip  quake2.001  quake2.dsw  quake2.plg  quake2.sln  quake2.vcproj  vquake2.vcproj  vquake2ded.vcproj
source/quake3/: CMakeLists.txt  jlquake3.vcproj  jlquake3.vcxproj  jlquake3.vcxproj.filters  jlquake3ded.props  jlquake3ded.vcproj  jlquake3ded.vcxproj  jlquake3ded.vcxproj.filters  quake3.sln  (+3 more)
(+2209 files in other folders)
