set(CLIENT_FILES
	cinematic/cin.cpp
	cinematic/main.cpp
	cinematic/pcx.cpp
	cinematic/roq.cpp
	game/et/cgame.cpp
	game/et/dl_main_curl.cpp
	game/et/ui.cpp
	game/hexen2/chunk.cpp
	game/hexen2/connection.cpp
	game/hexen2/demo.cpp
	game/hexen2/effects.cpp
	game/hexen2/entities.cpp
	game/hexen2/explosion.cpp
	game/hexen2/light_effects.cpp
	game/hexen2/main.cpp
	game/hexen2/menu.cpp
	game/hexen2/parse.cpp
	game/hexen2/particle_effects.cpp
	game/hexen2/projectiles.cpp
	game/hexen2/screen.cpp
	game/hexen2/status_bar.cpp
	game/hexen2/stream.cpp
	game/hexen2/temporary_entities.cpp
	game/quake/connection.cpp
	game/quake/entities.cpp
	game/quake/light_effects.cpp
	game/quake/main.cpp
	game/quake/parse.cpp
	game/quake/particle_effects.cpp
	game/quake/projectiles.cpp
	game/quake/screen.cpp
	game/quake/skin.cpp
	game/quake/status_bar.cpp
	game/quake/temporary_entities.cpp
	game/quake_hexen2/connection.cpp
	game/quake_hexen2/demo.cpp
	game/quake_hexen2/main.cpp
	game/quake_hexen2/menu.cpp
	game/quake_hexen2/network_channel.cpp
	game/quake_hexen2/parse.cpp
	game/quake_hexen2/predict.cpp
	game/quake_hexen2/view.cpp
	game/quake2/beam.cpp
	game/quake2/connection.cpp
	game/quake2/demo.cpp
	game/quake2/effects.cpp
	game/quake2/entities.cpp
	game/quake2/explosion.cpp
	game/quake2/hud.cpp
	game/quake2/laser.cpp
	game/quake2/light_effects.cpp
	game/quake2/main.cpp
	game/quake2/menu.cpp
	game/quake2/parse.cpp
	game/quake2/particle_effects.cpp
	game/quake2/predict.cpp
	game/quake2/qmenu.cpp
	game/quake2/screen.cpp
	game/quake2/sustain.cpp
	game/quake2/temporary_entities.cpp
	game/quake2/view.cpp
	game/quake3/cgame.cpp
	game/quake3/ui.cpp
	game/tech3/cdkey.cpp
	game/tech3/cgame.cpp
	game/tech3/connection.cpp
	game/tech3/demo.cpp
	game/tech3/main.cpp
	game/tech3/network_channel.cpp
	game/tech3/parse.cpp
	game/tech3/screen.cpp
	game/tech3/serverlist.cpp
	game/tech3/ui.cpp
	game/wolfmp/cgame.cpp
	game/wolfmp/ui.cpp
	game/wolfsp/cgame.cpp
	game/wolfsp/ui.cpp
	game/camera.cpp
	game/dynamic_lights.cpp
	game/input.cpp
	game/light_styles.cpp
	game/parse.cpp
	game/particles.cpp
	input/keys.cpp
	input/main.cpp
	input/unix.cpp
	renderer/images/bmp.cpp
	renderer/images/image.cpp
	renderer/images/jpg.cpp
	renderer/images/pcx.cpp
	renderer/images/pic.cpp
	renderer/images/tga.cpp
	renderer/images/wal.cpp
	renderer/models/bsp29.cpp
	renderer/models/bsp38.cpp
	renderer/models/bsp46.cpp
	renderer/models/md2.cpp
	renderer/models/md3.cpp
	renderer/models/md4.cpp
	renderer/models/mdc.cpp
	renderer/models/mdl.cpp
	renderer/models/mdm.cpp
	renderer/models/mds.cpp
	renderer/models/model.cpp
	renderer/models/RenderModel.cpp
	renderer/models/RenderModelBad.cpp
	renderer/models/RenderModelBSP29.cpp
	renderer/models/RenderModelBSP29NonMap.cpp
	renderer/models/RenderModelBSP38.cpp
	renderer/models/RenderModelBSP46.cpp
	renderer/models/RenderModelMD2.cpp
	renderer/models/RenderModelMD3.cpp
	renderer/models/RenderModelMD4.cpp
	renderer/models/RenderModelMDC.cpp
	renderer/models/RenderModelMDL.cpp
	renderer/models/RenderModelMDLNew.cpp
	renderer/models/RenderModelMDM.cpp
	renderer/models/RenderModelMDS.cpp
	renderer/models/RenderModelMDX.cpp
	renderer/models/RenderModelSP2.cpp
	renderer/models/RenderModelSPR.cpp
	renderer/models/sp2.cpp
	renderer/models/spr.cpp
	renderer/backend.cpp
	renderer/commands.cpp
	renderer/curve.cpp
	renderer/decals.cpp
	renderer/driver_glx.cpp
	renderer/flares.cpp
	renderer/font.cpp
	renderer/init.cpp
	renderer/light.cpp
	renderer/main.cpp
	renderer/marks.cpp
	renderer/noise.cpp
	renderer/particle.cpp
	renderer/qgl.cpp
	renderer/scene.cpp
	renderer/screenshot.cpp
	renderer/shade.cpp
	renderer/shade_calculate.cpp
	renderer/shader.cpp
	renderer/shadows.cpp
	renderer/skin.cpp
	renderer/sky.cpp
	renderer/state.cpp
	renderer/Surface.cpp
	renderer/surface1.cpp
	renderer/surface2.cpp
	renderer/surface3.cpp
	renderer/SurfaceDecal.cpp
	renderer/SurfaceEntity.cpp
	renderer/SurfaceFace.cpp
	renderer/SurfaceFaceQ1.cpp
	renderer/SurfaceFaceQ1Q2.cpp
	renderer/SurfaceFaceQ2.cpp
	renderer/SurfaceFoliage.cpp
	renderer/SurfaceGrid.cpp
	renderer/SurfaceMD2.cpp
	renderer/SurfaceMD3.cpp
	renderer/SurfaceMD4.cpp
	renderer/SurfaceMDC.cpp
	renderer/SurfaceMDL.cpp
	renderer/SurfaceMDM.cpp
	renderer/SurfaceMDS.cpp
	renderer/SurfaceParticles.cpp
	renderer/SurfacePoly.cpp
	renderer/SurfacePolyBuffer.cpp
	renderer/SurfaceSkip.cpp
	renderer/SurfaceSubdivider.cpp
	renderer/SurfaceSP2.cpp
	renderer/SurfaceSPR.cpp
	renderer/SurfaceTriangles.cpp
	renderer/wad.cpp
	renderer/world.cpp
	renderer/WorldSurface.cpp
	sound/audiocd/linux.cpp
	sound/midi/null.cpp
	sound/driver_alsa.cpp
	#sound/driver_oss.cpp
	sound/main.cpp
	sound/memory.cpp
	sound/mix.cpp
	splines/q_parse.cpp
	splines/splines.cpp
	ui/console.cpp
	ui/draw.cpp
	ui/field.cpp
	ui/main.cpp
	ui/screen.cpp
	ui/view.cpp
	chase.cpp
	client_main.cpp
	system_unix.cpp
	translate.cpp
	utils.cpp
)

set(CLIENT_ASM_FILES
	sound/mix_x86.s
)

foreach(SRC ${CLIENT_ASM_FILES})
	get_filename_component(FILE_BASE ${SRC} NAME_WE)
	set(OBJ ${CMAKE_CURRENT_BINARY_DIR}/${FILE_BASE}.o)
	add_custom_command(OUTPUT ${OBJ}
		DEPENDS ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/qasm.h
		COMMAND ${CMAKE_C_COMPILER} -x assembler-with-cpp -DELF
			-c ${CMAKE_CURRENT_SOURCE_DIR}/${SRC} -o ${OBJ}
	)
	set(CLIENT_FILES ${CLIENT_FILES} ${OBJ})
endforeach(SRC)

add_library(client STATIC ${CLIENT_FILES})
set_target_properties(client PROPERTIES COMPILE_FLAGS "${ALL_CFLAGS}")
add_dependencies(client common)
